--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,25 @@ lerna-debug.log*
 
 # misc
 .DS_Store
+
+# PM2
+.pm2/
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Backup files
+*.backup
+*.bak
+*.tar.gz
+*.zip
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
