--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,7 +10,7 @@
     {
       "binding": "DB",
       "database_name": "ethos-uari-production",
-      "database_id": ""
+      "database_id": "local-db-placeholder"
     }
   ]
 }
